# cuda-spikes

./: .gitignore  :w  CMakeLists.txt  README.md  config.h  data.c  data.h  main.c  process.c  render.c  render.h  spike.cu  spike.h  test.c  utils.c  utils.h
.build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  foo  main  mnist  net  test_main
analyze/: analyze.py  chart.py  main.py
assets/shaders/: blur.fs
include/: compute.h  config.h  csv.h  data.h  encode.h  eye.h  input.h  logger.h  mnist.h  network.h  process.h  render.h  spike.h  utils.h
libs/cuda/: spike.cu
libs/log/: csv.c  logger.c
libs/mnist/: mnist.c
libs/network/: compute.c  data.c  network.c  process.c  render.c  utils.c
libs/senses/: encode.c  eye.c  input.c
logs/: log.csv  membranes.csv  population.csv  refractory.csv  spikes.csv  thresholds.csv  traces.csv
src/: foo.c  main.c  mnist.c  net.c  test.c
